<resources>
    <string name="app_name">Restaurante Criollo</string>
    <string name="txt_user">Usuario</string>
    <string name="txt_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="platos_criollos">Platos Criollos</string>

    <string name="action_ordenar_por_cliente">Ordenar por Cliente</string>
    <string name="action_ordenar_por_direccion">Ordenar por Direccion</string>
    <string name="action_ordenar_por_turno_ini">Ordenar por Turno de Inicio</string>
    <string name="action_ordenar_por_turno_fin">Ordenar por Turno de Final</string>
    <string name="action_ordenar_por_prioridad">Ordenar por Prioridad</string>
    <string name="action_lista_entrega_buscar">Buscar</string>
    <string name="action_lista_entrega_escanear">Escanear</string>

    <string name="criollo_arrozpollo">Arroz con Pollo</string>
    <string name="criollo_ceviche">Ceviche</string>


    <!--menu_nav-->
    <string name="user_name">restaurant@maquistemas.com</string>
    <string name="nav_nosotros">Nosotros</string>
    <string name="nav_criollos">Platos criollos</string>
    <string name="nav_sucursal">Sucursales</string>
    <string name="nav_reserva">Reservaciones</string>
    <string name="nav_soporte">Soporte</string>
    <string name="nav_contacto">Contacto</string>
    <string name="nav_admin">Administracion</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank criollos</string>
    <string name="reg_nombre">Nombres</string>
    <string name="reg_apellidos">Apellidos</string>
    <string name="reg_usuario">Usuario</string>
    <string name="reg_password">Password</string>
    <string name="reg_registrar">Registrar</string>
    <string name="reg_limpiar">Limpiar</string>
    <string name="reg_email">correo</string>


    <!-- Session de usuario -->
    <string name="session_key">session_key</string>
    <string name="sesion_usuario_nombres">sesion_usuario_nombres</string>
    <string name="sesion_usuario_apellidos">sesion_usuario_apellidos</string>
    <string name="sesion_usuario_usuario">sesion_usuario_usuario</string>
    <string name="sesion_usuario_email">sesion_usuario_email</string>

    <!-- Email -->
    <string name="email_from">De:</string>
    <string name="email_to">Para:</string>
    <string name="email_subject">Asunto:</string>
    <string name="email_message">Mensaje</string>
    <string name="email_send">Enviar</string>


</resources>
