<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ordenar"
        android:title="@string/action_ordenar_por_cliente"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_ordenar_por_direccion"
        android:title="@string/action_ordenar_por_direccion"
        app:showAsAction="never"/>

    <item android:id="@+id/action_ordenar_por_turno_ini"
        android:title="@string/action_ordenar_por_turno_ini"
        app:showAsAction="never"/>

    <item android:id="@+id/action_ordenar_por_turno_fin"
        android:title="@string/action_ordenar_por_turno_fin"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_ordenar_por_prioridad"
        android:title="@string/action_ordenar_por_prioridad"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_buscar"
        android:title="@string/action_lista_entrega_buscar"
        android:icon="@drawable/buscar_white"
        app:showAsAction="always"/>

</menu>
