<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_nosotros"
            android:icon="@drawable/ic_acceso"
            android:title="@string/nav_nosotros"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_criollos"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_criollos"
            />
        <item
            android:id="@+id/nav_sucursales"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_sucursal"
            />
        <item
            android:id="@+id/nav_reservaciones"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_reserva"
            />
    </group>

    <item
        android:title="@string/nav_soporte"
        >
        <menu>
            <item
                android:id="@+id/nav_ayuda"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_ayuda"
                />
            <item
                android:id="@+id/nav_administracion"
                android:icon="@android:drawable/ic_lock_idle_lock"
                android:title="@string/nav_admin"
                />
        </menu>
    </item>
</menu>